[package]
edition = "2021"
name = "hztp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "4"}
chrono = "0.4.24"
default-net = "0.14"
futures = "0.3.28"
quick-xml = {version = "0.28.1", features = ["serialize"]}
rand = "0.8.5"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
socket2 = {path = "./crates/socket2"}
surge-ping = "0.8.0"
tokio = "1.27.0"
uuid = {version = "1.3", features = ["v4"]}

[patch.crates-io]
socket2 = {path = "./crates/socket2"}

[profile.release]
strip = true
