[package]
edition = "2021"
name = "hztp"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib"]

# [build]
# target = "armv7-linux-androideabi"

[dependencies]
actix-cors = "0.6.4"
actix-web = {version = "4"}
chrono = "0.4.24"
default-net = "0.14"
futures = "0.3.28"
# local-ip-address = {path = "../local-ip-address"}
log = "0.4.17"
pin-project-lite = "0.2.9"
pnet = "0.33"
pnet_datalink = "0.33"
# prost = "0.11"
quick-xml = {version = "0.28.1", features = ["serialize"]}
rand = "0.8.5"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
socket2 = "0.5.3"
surge-ping = "0.8.0"
tokio = {version = "1.27.0", features = ["macros", "rt-multi-thread", "process"]}
# tonic = "0.9"
libmdns = "0.7"
uuid = {version = "1.3", features = ["v4"]}

# [patch.crates-io]
# socket2 = {path = "./crates/socket2"}
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"
jni = "0.21"
log-panics = {version = "2", features = ["with-backtrace"]}
ndk = "0.7"
ndk-sys = "0.4"

[profile.release]
codegen-units = 1
lto = true
strip = true
